update cmakelists.txt (install success on ubuntu)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,22 @@ set(SOURCE_FILES
 set(curses_PREFIX "${CMAKE_CURRENT_BINARY_DIR}/libncurses5")
 set(curses_INSTALL_DIR "${CMAKE_CURRENT_BINARY_DIR}/libncurses5")
 
+IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+  SET(CMAKE_INSTALL_PREFIX <path> CACHE PATH <comment> FORCE)
+ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+
 # find_package(curses REQUIRED)
 
 ExternalProject_add(project_curses
 	URL http://ftp.gnu.org/pub/gnu/ncurses/ncurses-6.1.tar.gz
 	PREFIX ${curses_PREFIX}
-	CONFIGURE_COMMAND "${curses_PREFIX}/src/project_curses/configure --prefix=${curses_PREFIX}"
+	CONFIGURE_COMMAND ${curses_PREFIX}/src/project_curses/configure --prefix=${curses_INSTALL_DIR}
+	PREFIX=${curses_PREFIX}
 	BUILD_COMMAND make
 	INSTALL_COMMAND make install
-	INSTALL_DIR ${curses_INSTALL_DIR}
+	#INSTALL_DIR ${curses_INSTALL_DIR}
 )
+
 ExternalProject_Get_Property(project_curses install_dir)
 
 add_library(curses STATIC IMPORTED)
